chore: update to latest quarkus version